[project]
name = "bhoonidhi-downloader"
version = "0.1"
description = "Command line tool for searching and downloading satellite data from Bhoonidhi"
license = "Apache-2.0"
authors = [
    { name = "geovicco-dev", email = "geovicco.dev@gmail.com" }
]
dependencies = [
    "geopandas==1.0.1",
    "typer>=0.12.3",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"bhoonidhi-downloader" = "bhoonidhi_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bhoonidhi_downloader"]
