[project]
name = "bhoonidhi-downloader"
version = "0.1.2.dev0"
description = "Command line tool for searching and downloading satellite data from Bhoonidhi"
license = "MIT"
authors = [
    { name = "geovicco-dev", email = "geovicco.dev@gmail.com" }
]
dependencies = [
    "geopandas==1.0.1",
    "typer>=0.12.3",
    "requests>=2.32.3",
    "tqdm>=4.66.4",
    "wget>=3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

urls = { "homepage" = "https://github.com/geovicco-dev/bhoonidhi-downloader", "repository" = "https://github.com/geovicco-dev/bhoonidhi-downloader" }

[project.scripts]
"bhoonidhi-downloader" = "bhoonidhi_downloader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pyyaml>=6.0.1",
    "tabulate>=0.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bhoonidhi_downloader"]
